Fixed alignment of 1st screen

--- a/app/assets/stylesheet/template.scss
+++ b/app/assets/stylesheet/template.scss
@@ -1135,6 +1135,7 @@ h4 {
     }
 
     .content {
+      height: 100%;
       font-size: 0.875em;
     }
 
